updates to api sample generator code and spec fixing various issues